# IoT

./: CMakeLists.txt  mqtt_client.py  sdkconfig  sdkconfig.old  sensor_data.json
main/: CMakeLists.txt  abc.c  bmx280.c  ds18b20.c  main.c  main2.c  station_example_main.c
main/include/: bmp280.h  bmx280.h  bmx280_bits.h  config.h  font8x8_basic.h  gap.h  gatt_svc.h  mqtt_manager.h  ssd1366.h  wifi_manager.h
main/src/: ble_manager.c  bmp280.c  bmx280_example_with_i2c_master.c  components_manager.c  gap.c  gatt_svc.c  hw827.c  main.c  mqtt_manager.c  oled_library.c  wifi_manager.c
